<resources>
    <string name="app_name">My Notes</string>
    <string name="title_activity_main2">Details</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="view">View File</string>
    <string name="export">Export</string>
    <string name="remove">Delete</string>
    <string name="backup">Backup</string>
    <string name="importFile">Import</string>
    <string name="new_subject">New Subject</string>
    <string name="subject">Subject Name</string>
    <string name="select_file">Select File</string>
    <string name="title_scrolling_textview_activity">View</string>
    <string name="searchText">Enter Text to Find</string>
    <string name="tea">Tea</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="coffe">Coffe</string>
    <string name="paid">Paid</string>
    <string name="notPaid">Not Paid</string>
    <string name="sellDate">Sell Date</string>
    <string name="theme_dayLight"> Theme - Day Light</string>
    <string name="previousSell">Previous Sell</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="rate_date">Rate from Date</string>
    <string name="rates">Rates</string>
    <string name="tea_rate">Tea Rate</string>
    <string name="coffe_rate">Coffe Rate</string>
    <string name="note_settings">Settings</string>
    <string name="test">Test</string>
    <string name="currency">₹</string>
    <string name="total">Total</string>
    <string name="theme_nightDark">Theme - Night Dark</string>
    <string name="dynaform">Design Screen</string>
    <string name="loading">Loading...</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="continue_to_app">Continue</string>
    <string name="signed_out">Signed Out</string>
    <string name="enter_subject">enter name</string>
    <string name="enter_text">enter text</string>
    <string name="selectItem">enter text to find or select from list</string>
    <string name="shabdaKosh">ShabdaKosh</string>
    <string name="add_control">Add Field</string>
    <string name="add_record">Add Record</string>
    <string name="edit_control">Edit Field</string>
    <string name="edit_record">Edit Record</string>
    <string name="delete_control">Delete Field</string>
    <string name="delete_record">Delete Record</string>
    <string name="screen_preview">Screen Preview</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="add_to_dictionary">Add to Shabda Kosh</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="title_activity_pdfview">PDFViewActivity</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title_activity_biometric_sign_in">BiometricSignIn</string>
    <string name="server_client_id">334043020289-3hlevnmgrkvsg4ff1ej7cni1bvqckkc8.apps.googleusercontent.com</string>
    <string name="select_audio_file">Select audio file</string>
    <string name="summary">Summary</string>
    <string name="only_json_files_are_supported">Only JSON files are supported</string>
    <string name="unable_to_read_data_from_file">Unable to read data from file</string>
    <string name="save_to">\"Saved to</string>
    <string name="reading_text_in">Reading text in</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="please_select_record_to_edit_it">Please select record to Edit it</string>
    <string name="screen_design_define_field">Screen Design: Define field</string>
    <string name="add_or_edit_record">Add/Edit Record</string>
    <string name="screen_design_preview">Screen Design: Preview</string>
    <string name="no_application_available_to_view_document">No Application Available to view document</string>
    <string name="download_failed">download failed</string>
    <string name="saved">Saved</string>
    <string name="importing_from_file">Importing from file</string>
    <string name="failed_to_import_file">Failed to import file</string>
    <string name="successfully_exported_to">Successfully exported to</string>
    <string name="upload_failed">upload failed</string>
    <string name="fingerprint_authentication_permission_not_enabled">Fingerprint authentication permission not enabled</string>
    <string name="Lock_screen_security_not_enableds_in_settings">Lock screen security not enabled in Settings</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_succeeded">Authentication succeeded!</string>
    <string name="authentication_error">Authentication error</string>
    <string name="select_langguage">Select Language</string>
    <string name="marathi">Marathi</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="what_you_want_to_do">What you want to do</string>
    <string name="naamasmaran">Naamasmaran</string>
    <string name="audio_note">Audio Note</string>
    <string name="read_aloud">Read aloud</string>
    <string name="edit_note">Edit Note</string>
    <string name="view_note">View Note</string>
    <string name="play_note_audio">Play Note Audio</string>
    <string name="screen_design">Screen Design</string>
    <string name="relationship">Relationship</string>
    <string name="note_already_exists_merging_changes">Note Subject already exists, importing and merging changes</string>
    <string name="taking_back_of">Taking backup of</string>
    <string name="ic_rotate_left_24">Rotate counter clockwise</string>
    <string name="ic_rotate_right_24">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="ic_flip_24">Flip</string>
    <string name="ic_flip_24_horizontally">Flip horizontally</string>
    <string name="ic_flip_24_vertically">Flip vertically</string>
    <array name="actions_on_note">
        <item>@string/edit_note</item>
        <item>@string/view_note</item>
        <item>@string/play_note_audio</item>
        <item>@string/play_note_items_audio</item>
        <item>@string/screen_design</item>
        <item>@string/relationship</item>
        <item>@string/note_settings</item>
    </array>
    <array name="reading_languages">
        <item>@string/marathi</item>
        <item>@string/hindi</item>
        <item>@string/english</item>
    </array>
    <array name="actions_on_note_item">
        <item>@string/share</item>
        <item>@string/naamasmaran</item>
        <item>@string/audio_note</item>
        <item>@string/read_aloud</item>
    </array>
    <string name="no_audio_note">no audio note</string>
    <string name="play_note_items_audio">Play Note Items Audio</string>
    <string name="crash_text_toast" translatable="false">MyNote Crashed</string>
    <string name="title_activity_photo_gallary">PhotoGallaryActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_image_cropper">ImageCropperActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <integer name="textsize">25</integer>
    <integer name="labeltextsize">20</integer>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="main_action_rotate">Rotate</string>
    <string name="main_action_crop">Crop</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sync_local_data">Sync Local Data</string>
</resources>
