<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:visible="true"
        android:title="@string/edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_action_edit"
        android:visible="true"
        android:title="@string/edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/ic_action_clear"
        android:title="@string/clear"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_remove"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/remove"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_view"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/view"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/copy"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_export_white_24dp"
        android:title="@string/export"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_backup"
        android:icon="@drawable/ic_backup_black_24dp"
        android:title="@string/backup"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_import"
        android:icon="@drawable/ic_backup_black_24dp"
        android:title="@string/importFile"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_daylight"
        android:icon="@drawable/ic_action_daylight"
        android:title="@string/theme_dayLight"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_nightlight"
        android:icon="@drawable/ic_action_darklight"
        android:title="@string/theme_nightDark"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_test"
        android:title="@string/test"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_design_screen"
        android:title="@string/dynaform"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_add_to_dictionary"
        android:title="@string/add_to_dictionary"
        app:showAsAction="ifRoom"
        />
</menu>
