<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4">

    <EditText
        android:id="@+id/etKrutisheelName"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/rate_date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:divider="@android:color/transparent"
        android:dividerHeight="1.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="72dp"
        android:layout_height="38dp"
        android:text="@string/tea"
        android:textAlignment="textStart"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:text="@string/coffe"
        android:textAlignment="textStart"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="119dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="121dp"
        android:layout_height="19dp"
        android:text="@string/rates"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="162dp" />

    <EditText
        android:id="@+id/etTeaRate"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:hint="@string/tea_rate"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/etCoffeRate"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:hint="@string/coffe_rate"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

</android.support.constraint.ConstraintLayout>