<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/editView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_control" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_control" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_control" />

        <Button
            android:id="@+id/btnPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_preview" />
    </LinearLayout>

    <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="1.0sp"
            android:scrollbars="vertical"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/darker_gray"/>
</LinearLayout>
